--- a/src/main/resources/templates/employee-list.html
+++ b/src/main/resources/templates/employee-list.html
@@ -7,7 +7,6 @@
     <title> demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link href="/static/css/myClass.css" rel="stylesheet">
 </head>
 <body>
 
@@ -55,98 +54,24 @@
                 <div class="col-12">
                     <h4>Admin panel</h4>
                 </div>
-
-
-
                 <div class="col-12">
-
-
-
-
-
-
-
                     <nav class="nav nav-tabs" id="nav-tab" role="tablist">
-                        <a class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
-                        <a class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</a>
-                        <a class="nav-link disabled" id="nav-disabled-tab" data-bs-toggle="tab" href="#nav-disabled" role="tab" aria-controls="nav-disabled" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Users table</a>
+                        <a class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">New user</a>
                     </nav>
                     <div class="tab-content" id="nav-tabContent">
-                        <!--nested all users container-->
                         <!--users table-->
                         <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                             <!--start-->
-
-                            <div class="col-12 bg-light border border-bottom-0">
-                                <h6 class="ps-3 py-2 m-0 first-table">All users</h6>
-                            </div>
-                            <div class="col-12 bg-body border px-3 pb-3">
-
-                                <div th:switch="${employees}">
-                                    <h2 th:case="null">No users yet!</h2>
-                                    <div th:case="*">
-                                        <table class="table caption-top table-striped table-hover bg-body table-borderless border-top">
-                                            <caption></caption>
-                                            <thead>
-                                            <tr>
-                                                <th scope="col">ID</th>
-                                                <th scope="col">First Name</th>
-                                                <th scope="col">Last Name</th>
-                                                <th scope="col">Department</th>
-                                                <th scope="col">Salary</th>
-                                                <th scope="col">Role</th>
-                                                <th scope="col">Edit</th>
-                                                <th scope="col">Delete</th>
-                                            </tr>
-                                            </thead>
-
-                                            <tbody>
-
-                                            <tr th:each="emp : ${employees}">
-                                                <td th:text="*{emp.id}"></td>
-                                                <td th:text="*{emp.name}"></td>
-                                                <td th:text="*{emp.surName}"></td>
-                                                <td th:text="*{emp.department}"></td>
-                                                <td th:text="*{emp.salary}"></td>
-                                                <td th:text="*{emp.toString()}"></td>
-                                                <td>
-                                                    <button th:href="@{/admin/employee-update/{id}(id=${emp.id})}"
-                                                            onclick="window.location.href=(this.getAttribute('href'))">Update
-                                                    </button>
-                                                </td>
-                                                <td>
-                                                    <button th:href="@{/admin/employee-delete/{id}(id=${emp.id})}"
-                                                            onclick="window.location.href=(this.getAttribute('href'))">Delete
-                                                    </button>
-                                                </td>
-                                            </tr>
-
-
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
-                            </div>
-                          <!--  end-->
+                            <div th:insert="all_users_table :: copy"></div>
+                            <!--  end-->
                         </div>
                         <!--end of first-->
                         <!--user table of new user-->
                         <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
                             <!--start body: table of new user -->
-                            <div class="col-12 bg-light border border-bottom-0">
-                                <h6 class="ps-3 py-2 m-0 first-table">Add new user</h6>
-                            </div>
-                            <div class="col-12 bg-body border px-3 pb-3">
-
-                                <!--<div th:switch="${employees}">
-                                    <h2 th:case="null">No users yet!</h2>
-                                    <div th:case="*">
-                                        <table class="table caption-top table-striped table-hover bg-body table-borderless border-top">
-                                            <caption></caption>
-
-                                        </table>
-                                    </div>
-                                </div>-->
+                                <!--here will be new user table-->
+                                <div th:insert="new_user_table :: copy"></div>
                             </div>
                             <!--end body: table of new user -->
                         </div>
