--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,87 +11,75 @@
 
 </head>
 <body>
-<header>
- <!--style="background-color: grey"-->
 
-    <!-- **************** the start of nav ********************** -->
 
-    <div class="row text-bg-dark py-2 m-0" style="color: papayawhip">
-        <div class="col-6">
-            <h5 class="nav-item">
-                user
-            </h5>
-        </div>
-        <div class="col-6 text-end">
-            <h5 class="nav-item">
-                <a href="/logout" style="text-decoration:none;color: gray">Logout</a>
-            </h5>
-        </div>
+
+
+
+
+
+<div class="col-12 bg-light border border-bottom-0">
+    <h6 class="ps-3 py-2 m-0 first-table">Add new user</h6>
+</div>
+<!--the wrapper div for form controls-->
+<div class="col-12 bg-body border px-3 pb-3">
+
+    <div class="col-4 offset-4 px-3 mt-4">
+
+        <form class="text-center fw-bold">
+            <div class="mb-3">
+                <label for="FirstName" class="form-label mb-0">First name</label>
+                <input type="text" class="form-control" id="FirstName">
+            </div>
+
+            <div class="mb-3">
+                <label for="LastName" class="form-label mb-0">Last name</label>
+                <input type="text" class="form-control" id="LastName">
+            </div>
+
+            <div class="mb-3">
+                <label for="age" class="form-label mb-0">Age</label>
+                <input type="number" class="form-control" id="age">
+            </div>
+
+            <div class="mb-3">
+                <label for="email" class="form-label mb-0">Email</label>
+                <input type="email" class="form-control" id="email">
+            </div>
+
+            <div class="mb-3">
+                <label for="password" class="form-label mb-0">Password</label>
+                <input type="password" class="form-control" id="password">
+            </div>
+
+            <label for="role" class="form-label mb-0">Role</label>
+            <select class="form-select mb-3" size="2" multiple aria-label="multiple select example" id="role">
+                <option value="1">ADMIN</option>
+                <option value="2">ROLE</option>
+            </select>
+
+
+            <button type="submit" class="btn btn-success ">Add new user</button>
+        </form>
     </div>
-</header>
-    <!-- **************** the end of nav ********************** -->
 
-<main>
-    <div class="container-fluid" style="height: 850px">
-        <div class="row bg-light " style="height: 100%">
-        <div class="col-2  bg-body px-0 pt-3">
-            <div class="d-grid">
-                <button type="button" class="btn btn-primary text-start" style="border-radius: 2px">
-                    User
-                </button>
+</div>
 
-                    <ul class="nav nav-pills">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/user">Активная</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Ссылка</a>
-                        </li>
-                    </ul>
 
-                <h6><a href="/logout" style="text-decoration:none;color: #462222">Logout</a></h6>
-            </div>
-        </div>
 
-        <div class="col-md-10 px-4 pt-3 bg-light">
-            <!-- the follow column is for table-->
-            <div class="col-12">
-                <h4>User information page</h4>
-            </div>
-            <div class="col-12 bg-light border border-bottom-0">
-                <h6 class="ps-3 py-2 m-0 first-table">About user</h6>
-            </div>
-            <div class="col-12 bg-body border px-3 pb-3">
-                <table class="table caption-top table-striped table-hover
-                        bg-body table-borderless border-top">
-                    <caption></caption>
-                    <thead>
-                    <tr>
 
-                        <th scope="col">First Name</th>
-                        <th scope="col">Last Name</th>
-                        <th scope="col">Age</th>
-                        <th scope="col">Email</th>
-                        <th scope="col">Role</th>
-                    </tr>
-                    </thead>
 
-                    <tbody>
-                    <tr class="table-active border-top">
-                        <td>1</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-    </div>
-</main>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
