--- a/src/main/resources/templates/all_users_table.html
+++ b/src/main/resources/templates/all_users_table.html
@@ -3,6 +3,13 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.w3.org/1999/xhtml"
       lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+</head>
 <body>
 <div th:fragment="copy">
 
@@ -68,85 +75,12 @@
         </div>
 
         <div th:each="employee : ${employees}">
-            <p th:text="*{employee.getId()}"></p>
 
-            <div class="modal fade" th:attr="id=${employee.id}" tabindex="-1" aria-labelledby="edit" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <form class="text-center fw-bold" th:object="${employee}" th:action="@{/admin/employee-update}"
-                              th:method="PATCH" th:id="${employee.id}">
-                            <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="e">Modal title</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <div class="mb-3">
-                                    <label for="idEditUser"><strong>ID</strong></label>
-                                    <input class="form-control" type="number" readonly th:value="${employee.id}" name="id" id="idEditUser" >
-                                </div>
-                                <div class="mb-3">
-                                    <label for="nameEditUser" class="form-label">First name</label>
-                                    <input class="form-control" type="text" th:value="${employee.name}" name="name" id="nameEditUser">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="surNameEditUser" class="form-label">Last name</label>
-                                    <input type="text" class="form-control" id="surNameEditUser" th:value="${employee.surName}" name="surName">
-                                </div>
-
-
-                                <div class="mb-3">
-                                    <label for="ageEditUser" class="form-label">Age</label>
-                                    <input type="number" class="form-control" id="ageEditUser" th:value="${employee.age}" name="age">
-                                </div>
-
-                                <div class="mb-3">
-                                    <label for="emailEditUser" class="form-label">Email address</label>
-                                    <input type="email" class="form-control" id="emailEditUser" th:value="*{email}" name="email">
-                                </div>
-
-                                <div class="mb-3">
-                                    <label for="passwordConfirmEditUser" class="form-label">Password</label>
-                                    <input type="password" class="form-control" id="passwordConfirmEditUser"
-                                           th:value="${employee.passwordConfirm}" name="passwordConfirm">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="passwordEditUser" class="form-label">Password should be hidden</label>
-                                    <input type="text" class="form-control" readonly th:value="*{password}" id="passwordEditUser" name="password">
-                                </div>
-
-                                <label for="roleEditUser" class="form-label">Role</label>
-                                <!--<select class="form-select mb-3" multiple aria-label="multiple select example"
-                                        id="roleEditUser" th:value="${employee.roles}" name="roles">
-                                    <option th:each="role : ${roleSet}"
-                                            th:value="${role.name}"
-                                            th:text="${role.id}"
-                                            th:selected="${employee.roles}">
-                                    </option>
-                                </select>-->
-                                <select class="form-select mb-3" size="2" aria-label="size 2 select example"
-                                        id="roleEditUser" th:value="${employee.roles}" name="roles">
-                                    <option th:each="role : ${roleSet}"
-                                            th:value="${role.id}"
-                                            th:text="${role.name}">
-                                    </option>
-
-                                </select>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                                    Close
-                                </button>
-                                <!--<button type="button" class="btn btn-primary" th:href="@{/admin/employee-update}" th:method="post">Save changes</button>-->
-                                <button type="submit" class="btn btn-primary" >Add
-                                </button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
+            <div th:insert="modal_update_user :: copy"></div>
         </div>
     </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
 </body>
 </html>
